--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.2.1",
+    "colorthief": "^2.4.0",
+    "firebase": "^9.20.0",
+    "puppeteer": "^19.8.0",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
